@@ -33,6 +33,8 @@ public interface YarnWebParams {
   String ENTITY_STRING = "entity.string";
   String APP_OWNER = "app.owner";
   String APP_STATE = "app.state";
+  String APP_START_TIME_BEGIN = "app.started-time.begin";
+  String APP_START_TIME_END = "app.started-time.end";
   String APPS_NUM = "apps.num";
   String QUEUE_NAME = "queue.name";
   String NODE_STATE = "node.state";
