@@ -51,10 +51,14 @@ public interface ApplicationHistoryManager {
       IOException;
 
   /**
-   * This method returns the given number of Application
+   * This method returns the given number of Application in the
+   * given appStartedTime period.
+   *
    * {@link ApplicationReport}s.
    *
    * @param appsNum
+   * @param appStartedTimeBegin
+   * @param appStartedTimeEnd
    *
    * @return map of {@link ApplicationId} to {@link ApplicationReport}s.
    * @throws YarnException
@@ -62,9 +66,9 @@ public interface ApplicationHistoryManager {
    */
   @Public
   @Unstable
-  Map<ApplicationId, ApplicationReport>
-      getApplications(long appsNum) throws YarnException,
-          IOException;
+  Map<ApplicationId, ApplicationReport> getApplications(long appsNum,
+      long appStartedTimeBegin, long appStartedTimeEnd) throws YarnException,
+      IOException;
 
   /**
    * Application can have multiple application attempts
